--- a/index.html
+++ b/index.html
@@ -29,10 +29,64 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="col-md-1" id="9AM">9AM</div>
+        <textarea id="col-md-10"></textarea>
+        <button class="col-md-1" button type="button"><i class="fas fa-save"></i></button>
+      </div>
+      </div>
+      <div class="row">
+        <div class="col-md-1" id="10AM">10AM</div>
+        <textarea id="col-md-10"></textarea>
+        <button class="col-md-1" button type="button"><i class="fas fa-save"></i></button>
+      </div>
+      </div>
+      <div class="row">
+        <div class="col-md-1" id="11AM">11AM</div>
+        <textarea id="col-md-10"></textarea>
+        <button class="col-md-1" button type="button"><i class="fas fa-save"></i></button>
+      </div>
+      </div>
+      <div class="row">
+        <div class="col-md-1" id="12PM">12PM</div>
+        <textarea id="col-md-10"></textarea>
+        <button class="col-md-1" button type="button"><i class="fas fa-save"></i></button>
+      </div>
+      </div>
+      <div class="row">
+        <div class="col-md-1" id="1PM">1PM</div>
+        <textarea id="col-md-10"></textarea>
+        <button class="col-md-1" button type="button"><i class="fas fa-save"></i></button>
+      </div>
+      </div>
+      <div class="row">
+        <div class="col-md-1" id="2PM">2PM</div>
+        <textarea id="col-md-10"></textarea>
+        <button class="col-md-1" button type="button"><i class="fas fa-save"></i></button>
+      </div>
+      </div>
+      <div class="row">
+        <div class="col-md-1" id="3PM">3PM</div>
+        <textarea id="col-md-10"></textarea>
+        <button class="col-md-1" button type="button"><i class="fas fa-save"></i></button>
+      </div>
+      </div>
+      <div class="row">
+        <div class="col-md-1" id="4PM">4PM</div>
+        <textarea id="col-md-10"></textarea>
+        <button class="col-md-1" button type="button"><i class="fas fa-save"></i></button>
+      </div>
+      </div>
+      <div class="row">
+        <div class="col-md-1" id="5PM">5PM</div>
+        <textarea id="col-md-10"></textarea>
+        <button class="col-md-1" button type="button"><i class="fas fa-save"></i></button>
+      </div>
+      </div>
     </div>
-
+    
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
